--- a/packages/theme/pubspec.yaml
+++ b/packages/theme/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sizer: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -21,6 +22,11 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    # ======== ICONS ==========
+    - assets/icons/
+    # =========================
+    - assets/images/
 
   # To add assets to your package, add an assets section, like this:
   # assets:
