--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_gallery_saver: ^2.0.3
   photo_view: ^0.14.0
   cached_network_image: ^3.3.1
+  carousel_slider: ^4.2.1
   wallpaper: ^1.1.1
   flutter_tts: ^3.8.5
   english_words: ^4.0.0
@@ -93,6 +94,9 @@ flutter:
     - family: Kalam
       fonts:
         - asset: assets/fonts/Kalam/Kalam-Regular.ttf
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
